Fixed spacings of spwipeable collection links
SRFCMSAL-2740

--- a/source/_patterns/30-organisms/collection/collection.scss
+++ b/source/_patterns/30-organisms/collection/collection.scss
@@ -542,6 +542,14 @@ $background-overlap-wide: 50px;
       height: calc(100% - 40px);
     }
   }
+
+  .collection__links {
+    margin-top: 12px;
+
+    @include tablet-up {
+      margin-top: 0;
+    }
+  }
 }
 
 .collection--swipeable {
@@ -974,7 +982,11 @@ $background-overlap-wide: 50px;
     }
 
     .collection__links {
-      margin-top: -12px;
+      margin-top: 0;
+
+      @include tablet-up {
+        margin-top: -12px;
+      }
     }
   }
 }
